apps/keycloak/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: keycloak
  namespace: keycloak
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth-cloudomega.sytes.net`)
      kind: Rule
      services:
        - name: keycloak
          port: 80
  tls:
    certResolver: letsencrypt-prod
